Removed unused files.

--- a/core/modules/loader/SConscript
+++ b/core/modules/loader/SConscript
@@ -16,10 +16,10 @@ for f in env.Glob(os.path.join(path, "udp*.cc"), source=True, strings=True):
     print(f)
     bin_cc_files[f] = [
         "loader",
-        "XrdCl",
-        "XrdSsiLib",
+#        "XrdCl",
+#        "XrdSsiLib",
         "qserv_common",
-        "xrdsvc",
+#        "xrdsvc",
         "util",
         "protobuf",
         "boost_filesystem",
