- extended HTTP server at module 'qhttp' with expplicit methods for managing server accepts (start/stop) to allow suspending/resuming the service if needed
- created the prototype implementation of the HTTP Control Thread class HttpThread
to be integrated into the new Master Replication Controller applucation
qserv-replica-master-http.cc

- added new Master Replication Controller applucation
qserv-replica-master-http.cc

- minor fix in the static controller qserv-replica-master.cc

- changed the default port in the Replication system's configuration of PDAC/NCSA
(the previous port 80 wasn't allowed by the infrastructure configuration)

- extended link-time dependencies of module 'replica' with 'qhttp'

--- a/core/modules/replica/SConscript
+++ b/core/modules/replica/SConscript
@@ -19,6 +19,7 @@ for f in env.Glob(os.path.join(path, "qserv-*.cc"), source=True, strings=True):
         "replica",
         "qserv_common",
         "xrdsvc",
+        "qhttp",
         "util",
         "protobuf",
         "boost_filesystem",
