add support for bit operators. add test for '&'
need to add tests for shift left & right, bit OR, and bit XOR.

--- a/admin/templates/configuration/etc/log4cxx.unittest.properties
+++ b/admin/templates/configuration/etc/log4cxx.unittest.properties
@@ -15,3 +15,4 @@ log4j.appender.CONSOLE.layout.ConversionPattern=[%d{yyyy-MM-ddTHH:mm:ss.SSSZ}] [
 # Tune log at the module level
 log4j.logger.lsst.qserv.qproc=DEBUG
 log4j.logger.lsst.qserv.util=DEBUG
+log4j.logger.lsst.qserv.parser=TRACE
