--- a/admin/tools/docker/index/container/dev/master/Dockerfile
+++ b/admin/tools/docker/index/container/dev/master/Dockerfile
@@ -1,7 +1,12 @@
 # Run the following build command from the qserv base directory (could be ~/work/qserv or ~/development/qserv)
 #   The COPY command can only access files below $PWD in the file tree.
-# docker build -f admin/tools/docker/index/container/dev/master/Dockerfile -t qserv/indexmaster:dev .
+# cd ~/work/qserv/admin/tools/docker/index/container/dev/master
+# docker build -t qserv/indexmaster:dev .
 FROM qserv/indexbase:dev 
+
+USER 0
+
+RUN yum update --assumeyes && yum install --assumeyes bind-utils
 
 USER 1001
     
