--- a/admin/tools/docker/index/index-k8.yaml
+++ b/admin/tools/docker/index/index-k8.yaml
@@ -1,63 +1,119 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: index
+  name: imaster-svc
   labels:
     app: index
 spec:
   ports:
   - port: 10042
-    name: index-master
+    protocol: UDP
   clusterIP: None
   selector:
+    app: imaster-pod
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: imaster-sts
+  labels:
     app: index
----
-apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  name: index-worker
 spec:
-  serviceName: "index"
-  replicas: 3
-  selector:
-    matchLabels:
-      app: indexW
-  template:
-    metadata:
-      labels:
-        app: indexW
-    spec:
-      containers:
-      - name: index-worker
-        image: qserv/indexworker:dev
-#        ports:
-#        - containerPort: 10043
-#          name: index-worker-udp
-#        - containerPort: 10143
-#          name: index-worker-tcp
-#        imagePullPolicy: Always
----
-apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  name: index-master
-spec:
-  serviceName: "index"
+  serviceName: imaster-svc
+  podManagementPolicy: Parallel
   replicas: 1
   selector:
     matchLabels:
-      app: indexM
+      app: imaster-pod
   template:
     metadata:
       labels:
-        app: indexM
+        app: imaster-pod
     spec:
       containers:
-      - name: index-master
+      - name: imaster-ctr
         image: qserv/indexmaster:dev
         ports:
         - containerPort: 10042
-          name: index-master
-#        imagePullPolicy: Always
-        
-     
+          protocol: UDP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: iworker-svc
+  labels:
+    app: index
+spec:
+  ports:
+  - port: 10043
+    protocol: UDP
+  clusterIP: None
+  selector:
+    app: iworker-pod
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: iworker-sts
+  labels:
+    app: index
+spec:
+  serviceName: iworker-svc
+  podManagementPolicy: Parallel
+  replicas: 3
+  selector:
+    matchLabels:
+      app: iworker-pod
+  template:
+    metadata:
+      labels:
+        app: iworker-pod
+    spec:
+      containers:
+      - name: iworker-ctr
+        image: qserv/indexworker:dev
+        ports:
+        - containerPort: 10043
+          protocol: UDP
+        - containerPort: 10143
+          protocol: TCP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: iclientnum-svc
+  labels:
+    app: index
+spec:
+  ports:
+  - port: 10050
+    protocol: UDP
+  clusterIP: None
+  selector:
+    app: iclientnum-pod
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: iclientnum-sts
+  labels:
+    app: index
+spec:
+  serviceName: iclientnum-svc
+  podManagementPolicy: Parallel
+  replicas: 1
+  selector:
+    matchLabels:
+      app: iclientnum-pod
+  template:
+    metadata:
+      labels:
+        app: iclientnum-pod
+    spec:
+      containers:
+      - name: iclientnum-ctr
+        image: qserv/indexclientnum:dev
+        ports:
+        - containerPort: 10050
+          protocol: UDP
+
