Moved Protobuf definition of the Replication System from module 'proto' into module 'replica'. Renamed the message types/classes to begin with 'Protocol'. Did minor refactoring in the relevant client classes. These actions were taken in a preparation for extending the protocol to support remote operations with Qserv work databases needed by the new Ingest System.

--- a/core/modules/replica/SConscript
+++ b/core/modules/replica/SConscript
@@ -4,6 +4,11 @@ Import('standardModule')
 
 import os.path
 
+env.Protoc(File("protocol.proto"),
+    PROTOC_PATH='.',
+    PROTOC_CCOUT='.',
+    PROTOC_PYOUT='.',)
+
 # Harvest special binary products - files starting with the package's name
 # followed by underscore:
 #
