--- a/admin/tools/docker/index/index-k8-m.yaml
+++ b/admin/tools/docker/index/index-k8-m.yaml
@@ -33,6 +33,7 @@ spec:
       containers:
       - name: imaster-ctr
         image: qserv/indexmaster:dev
+        imagePullPolicy: Always
         ports:
         - containerPort: 10042
           protocol: UDP
@@ -72,6 +73,7 @@ spec:
       containers:
       - name: iworker-ctr
         image: qserv/indexworker:dev
+        imagePullPolicy: Always
         ports:
         - containerPort: 10043
           protocol: UDP
@@ -114,6 +116,7 @@ spec:
       - name: iclientnum-ctr
         image: qserv/indexclientnum:dev
         args: ["1", "1000000", "client-k8s-a1.cnf"]
+        imagePullPolicy: Always
         ports:
         - containerPort: 10050
           protocol: UDP
@@ -154,6 +157,7 @@ spec:
       - name: iclientnum2-ctr
         image: qserv/indexclientnum:dev
         args: ["1000001", "2000000", "client-k8s-a2.cnf"]
+        imagePullPolicy: Always
         ports:
         - containerPort: 10050
           protocol: UDP
@@ -194,6 +198,7 @@ spec:
       - name: iclientnum3-ctr
         image: qserv/indexclientnum:dev
         args: ["2000001", "3000000", "client-k8s-a3.cnf"]
+        imagePullPolicy: Always
         ports:
         - containerPort: 10050
           protocol: UDP          
