Added a method for converting the number of milliseconds into an ISO-compatible string
Added the persistet state for 'super-transactions' in the new Ingest system.
Extended Database Services API of the Replication system to support operations
with the 'super-transactions'. Added a test application to test and manage
'super-transactions'. Extended the REST server of the Master Replication
Controller to support operations with 'super-transactions'.

Minor refactoring in the headers to replace structures with classes and to
improve the formatting of comments in the modified classes.

Added attribute PUBLISHED to a persistent state of the databases. Extended Configuration
API and the tool to support the new attribute.

Implemented database filtering in the Configuration and DatabaseService based on
the PUBLISHED status of a database. The default behaviour (unless a specific category
of databases is explicitly selected) is the same as before - select PUBLISHED
databases only. Also, a few code improvements have been made.

Added stubs to the REST server of the Master Relication Controller
for handling requests related to teh New Ingest. Fully implemented
the chunk placement request. Added two attributes to the worker descriptor
in the Configuration to support the new REST services implementation.
The actual support for these attributes will be added into Configuration
later.

Minor improvements in the code to see if this will solve a problem with 'git rebase master'

fixed bugs in the database schema of the Replication system and in its implementation

extended a unit test of the wpublish::ChunkInventory to test the operator which compares two inventoris and returns databases and chunks which are only present in the left-hand-side inventory

Implemented adaprive request status tracking for all requests of
the Controller Replication Framework. This allows quicket turnaround
for fast requests and less resource usage for the slow ones.

Added a Configuration option to be use

--- a/core/modules/replica/SConscript
+++ b/core/modules/replica/SConscript
@@ -23,6 +23,7 @@ for f in env.Glob(os.path.join(path, "qserv-*.cc"), source=True, strings=True):
         "XrdSsiLib",
         "replica",
         "qserv_common",
+        "qserv_css",
         "xrdsvc",
         "qhttp",
         "util",
