Added shared master and networking changes.

--- a/admin/templates/configuration/etc/xrdssi.cnf
+++ b/admin/templates/configuration/etc/xrdssi.cnf
@@ -2,9 +2,9 @@
 # Default values for parameters are commented
 
 [mysql]
-
-# hostname =
-# port =
+# &&&
+hostname = master.localdomain
+port = 3306
 
 # Username for mysql connections
 username = {{MYSQLD_USER_QSERV}}
