--- a/admin/templates/installation/qserv-meta.conf
+++ b/admin/templates/installation/qserv-meta.conf
@@ -108,6 +108,14 @@ user_qserv = qsmaster
 # Socket name for local mysql connection
 socket = %(qserv_run_dir)s/var/lib/mysql/mysql.sock
 
+
+# Host for shared Mysql services (css, qmeta) &&&
+[mysqld_shared]
+
+host = master.localdomain
+port = 3306
+
+
 [lua]
 
 # Directory where LUA is installed
