--- a/admin/templates/configuration/etc/my-proxy.cnf
+++ b/admin/templates/configuration/etc/my-proxy.cnf
@@ -3,8 +3,10 @@
 proxy-address = :{{MYSQLPROXY_PORT}}
 
 # proxy-backend-addresses = 127.0.0.1:3306
-# TODO : is it usefull for multi node ?
-proxy-backend-addresses = {{MYSQLD_HOST}}:{{MYSQLD_PORT}}
+# TODO : is it usefull for multi node ? &&&
+# &&& proxy-backend-addresses = {{MYSQLD_HOST}}:{{MYSQLD_PORT}}
+# &&& proxy-backend-addresses = {{MYSQLD_HOST}}:{{MYSQLD_PORT}}, {{MYSQLDSHARED_HOST}}:{{MYSQLDSHARED_PORT}}
+proxy-backend-addresses = {{MYSQLDSHARED_HOST}}:{{MYSQLDSHARED_PORT}}
 
 log-file={{QSERV_LOG_DIR}}/mysql-proxy.log
 log-level=debug
