--- a/admin/templates/installation/qserv-meta.conf
+++ b/admin/templates/installation/qserv-meta.conf
@@ -52,9 +52,10 @@ node_type = mono
 # Qserv master DNS name
 # WARNING : for mono-node install, do not use value localhost,
 # but 127.0.0.1 instead
-master = 127.0.0.1
+# master = 127.0.0.1 &&&
 # or
 # master = qserv-master-example-name.mydomain.edu
+master = master.localdomain
 
 
 [wmgr]
