--- a/admin/templates/configuration/etc/my-proxy.cnf
+++ b/admin/templates/configuration/etc/my-proxy.cnf
@@ -2,11 +2,7 @@
 # proxy-address = :4040
 proxy-address = :{{MYSQLPROXY_PORT}}
 
-# proxy-backend-addresses = 127.0.0.1:3306
-# TODO : is it usefull for multi node ? &&&
-# &&& proxy-backend-addresses = {{MYSQLD_HOST}}:{{MYSQLD_PORT}}
-# &&& proxy-backend-addresses = {{MYSQLD_HOST}}:{{MYSQLD_PORT}}, {{MYSQLDSHARED_HOST}}:{{MYSQLDSHARED_PORT}}
-proxy-backend-addresses = {{MYSQLDSHARED_HOST}}:{{MYSQLDSHARED_PORT}}
+proxy-backend-addresses = 127.0.0.1:3306
 
 log-file={{QSERV_LOG_DIR}}/mysql-proxy.log
 log-level=debug
