--- a/admin/templates/installation/qserv-meta.conf
+++ b/admin/templates/installation/qserv-meta.conf
@@ -52,7 +52,6 @@ node_type = mono
 # Qserv master DNS name
 # WARNING : for mono-node install, do not use value localhost,
 # but 127.0.0.1 instead
-# &&& master = 127.0.0.1
 master = master.localdomain
 # or
 # master = qserv-master-example-name.mydomain.edu
@@ -109,7 +108,7 @@ user_qserv = qsmaster
 # Socket name for local mysql connection
 socket = %(qserv_run_dir)s/var/lib/mysql/mysql.sock
 
-# Host for shared Mysql services (css, qmeta) &&&
+# Host for shared Mysql services (css, qmeta)
 [mysqld_shared]
 
 host = master.localdomain
