Fixed race condition in MsgElement::retrieve.

--- a/admin/tools/docker/index/container/dev/Dockerfile
+++ b/admin/tools/docker/index/container/dev/Dockerfile
@@ -7,7 +7,7 @@ FROM qserv/qserv:dev
 USER 0
 
 #RUN mv /usr/bin/sh /usr/bin/sh.old && ln -s /usr/bin/bash /usr/bin/sh
-RUN yum update --assumeyes && yum install --assumeyes bind-utils
+RUN yum update --assumeyes && yum install --assumeyes bind-utils gdb screen
 
 USER 1000 
 
