--- a/admin/tools/docker/index/index-k8-10m.yaml
+++ b/admin/tools/docker/index/index-k8-10m.yaml
@@ -61,7 +61,7 @@ metadata:
 spec:
   serviceName: iworker-svc
   podManagementPolicy: Parallel
-  replicas: 3
+  replicas: 14
   selector:
     matchLabels:
       app: iworker-pod
@@ -116,7 +116,7 @@ spec:
       - name: iclientnum-ctr
         image: qserv/indexclientnum:dev
         imagePullPolicy: Always
-        args: ["1000000", "1", "client-k8s-a1.cnf"]
+        args: ["10000000", "1", "client-k8s-a1.cnf"]
         ports:
         - containerPort: 10050
           protocol: UDP
@@ -157,7 +157,7 @@ spec:
       - name: iclientnum2-ctr
         image: qserv/indexclientnum:dev
         imagePullPolicy: Always
-        args: ["2000001", "3000001", "client-k8s-a2.cnf"]
+        args: ["20000001", "30000001", "client-k8s-a2.cnf"]
         ports:
         - containerPort: 10050
           protocol: UDP
@@ -198,9 +198,218 @@ spec:
       - name: iclientnum3-ctr
         image: qserv/indexclientnum:dev
         imagePullPolicy: Always
-        args: ["1000001", "2000000", "client-k8s-a3.cnf"]
+        args: ["10000001", "20000000", "client-k8s-a3.cnf"]
         ports:
         - containerPort: 10050
-          protocol: UDP          
+          protocol: UDP
 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: iclientnum4-svc
+  labels:
+    app: index
+spec:
+  ports:
+  - port: 10050
+    protocol: UDP
+  clusterIP: None
+  selector:
+    app: iclientnum4-pod
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: iclientnum4-sts
+  labels:
+    app: index
+spec:
+  serviceName: iclientnum4-svc
+  podManagementPolicy: Parallel
+  replicas: 1
+  selector:
+    matchLabels:
+      app: iclientnum4-pod
+  template:
+    metadata:
+      labels:
+        app: iclientnum4-pod
+    spec:
+      containers:
+      - name: iclientnum3-ctr
+        image: qserv/indexclientnum:dev
+        imagePullPolicy: Always
+        args: ["40000001", "50000000", "client-k8s-a1.cnf"]
+        ports:
+        - containerPort: 10050
+          protocol: UDP
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: iclientnum5-svc
+  labels:
+    app: index
+spec:
+  ports:
+  - port: 10050
+    protocol: UDP
+  clusterIP: None
+  selector:
+    app: iclientnum5-pod
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: iclientnum5-sts
+  labels:
+    app: index
+spec:
+  serviceName: iclientnum5-svc
+  podManagementPolicy: Parallel
+  replicas: 1
+  selector:
+    matchLabels:
+      app: iclientnum5-pod
+  template:
+    metadata:
+      labels:
+        app: iclientnum5-pod
+    spec:
+      containers:
+      - name: iclientnum5-ctr
+        image: qserv/indexclientnum:dev
+        imagePullPolicy: Always
+        args: ["50000001", "60000000", "client-k8s-a1.cnf"]
+        ports:
+        - containerPort: 10050
+          protocol: UDP
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: iclientnum6-svc
+  labels:
+    app: index
+spec:
+  ports:
+  - port: 10050
+    protocol: UDP
+  clusterIP: None
+  selector:
+    app: iclientnum6-pod
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: iclientnum6-sts
+  labels:
+    app: index
+spec:
+  serviceName: iclientnum6-svc
+  podManagementPolicy: Parallel
+  replicas: 1
+  selector:
+    matchLabels:
+      app: iclientnum6-pod
+  template:
+    metadata:
+      labels:
+        app: iclientnum6-pod
+    spec:
+      containers:
+      - name: iclientnum6-ctr
+        image: qserv/indexclientnum:dev
+        imagePullPolicy: Always
+        args: ["60000001", "70000000", "client-k8s-a1.cnf"]
+        ports:
+        - containerPort: 10050
+          protocol: UDP
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: iclientnum7-svc
+  labels:
+    app: index
+spec:
+  ports:
+  - port: 10050
+    protocol: UDP
+  clusterIP: None
+  selector:
+    app: iclientnum7-pod
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: iclientnum7-sts
+  labels:
+    app: index
+spec:
+  serviceName: iclientnum7-svc
+  podManagementPolicy: Parallel
+  replicas: 1
+  selector:
+    matchLabels:
+      app: iclientnum7-pod
+  template:
+    metadata:
+      labels:
+        app: iclientnum7-pod
+    spec:
+      containers:
+      - name: iclientnum7-ctr
+        image: qserv/indexclientnum:dev
+        imagePullPolicy: Always
+        args: ["70000001", "80000000", "client-k8s-a1.cnf"]
+        ports:
+        - containerPort: 10050
+          protocol: UDP
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: iclientnum8-svc
+  labels:
+    app: index
+spec:
+  ports:
+  - port: 10050
+    protocol: UDP
+  clusterIP: None
+  selector:
+    app: iclientnum8-pod
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: iclientnum8-sts
+  labels:
+    app: index
+spec:
+  serviceName: iclientnum8-svc
+  podManagementPolicy: Parallel
+  replicas: 1
+  selector:
+    matchLabels:
+      app: iclientnum8-pod
+  template:
+    metadata:
+      labels:
+        app: iclientnum8-pod
+    spec:
+      containers:
+      - name: iclientnum8-ctr
+        image: qserv/indexclientnum:dev
+        imagePullPolicy: Always
+        args: ["80000001", "90000000", "client-k8s-a1.cnf"]
+        ports:
+        - containerPort: 10050
+          protocol: UDP
 
