Created from contents of tickets/DM-17656.

--- a/core/modules/SConscript
+++ b/core/modules/SConscript
@@ -285,6 +285,12 @@ shlibs["qmetaLib"] = dict(mods="qmeta:python",
                           SHLIBPREFIX='',
                           instDir="$python_prefix/lsst/qserv/qmeta")
 
+# library of tools for building binary applications of the loader subsystem
+shlibs["loader"] = dict(mods="""loader""",
+                        libs="""qserv_common util protobuf boost_filesystem boost_system
+                        log log4cxx""")     
+
+
 # get list of all modules
 all_modules = sorted(str(d) for d in Glob('*', source=True) if os.path.isdir(d.srcnode().abspath))
 state.log.debug('all_modules: ' + str(all_modules))
