Increased read and write connection timeouts for mysql.

--- a/admin/templates/configuration/etc/my.cnf
+++ b/admin/templates/configuration/etc/my.cnf
@@ -27,6 +27,12 @@ use_stat_tables='preferably'
 # looking for the best query execution plan
 optimizer_use_condition_selectivity=3
 
+# Extend read and write connection timeouts that can be triggerd
+# by large result sets on the workers.
+net_read_timeout=900
+net_write_timeout=900
+
+
 #
 # Advanced logging
 #
