--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,8 @@ notifications:
     secure: eRFF9b5XJbZcyfxMojWTOB4bwWUVJf0CRaOYnCsV7cMCW5BwrDRwC+8tpZyEbetyici7XdFN33kW4rRp9UFfOCIsLS5fMJEKgjvgD0ybucThPsBqLE2VDzDzA6dUji7CATCPUtvoJEymM41pnvDZbXmtalipYzZJMPNXHyE8Yy0=
 
 after_success:
+  - echo "Generate and upload documentation"
+  - curl -fsSL https://raw.githubusercontent.com/lsst/doc-container/tickets\/DM-23256/run.sh | bash -s -- -p "$LTD_PASSWORD" "$PWD" 
   - echo "Push $IMAGE and associated master, worker images to Docker Hub"
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
   - docker push "$IMAGE"
