--- a/core/modules/SConscript
+++ b/core/modules/SConscript
@@ -199,6 +199,8 @@ if not env.GetOption('clean'):
         raise StandardError("Can't build")
 
     env.Append(CPPPATH=[os.getcwd()])
+    
+    env.Append(CCFLAGS = ' -Og ')
 
     env.Append(CCFLAGS = '-Og')
 
