--- a/admin/templates/configuration/etc/log4cxx.czar.properties
+++ b/admin/templates/configuration/etc/log4cxx.czar.properties
@@ -3,7 +3,7 @@
 # used by Qserv-czar
 #
 
-log4j.rootLogger=DEBUG, CONSOLE
+log4j.rootLogger=WARN, CONSOLE
 
 # Use this appender to interlace xrootd debug messages with Qserv-czar standard
 # logs. stdout/stderr are redirected to {{QSERV_LOG_DIR}}/qserv-czar-console.log.
