--- a/admin/tools/docker/deps/Dockerfile
+++ b/admin/tools/docker/deps/Dockerfile
@@ -2,7 +2,7 @@ FROM lsstsqre/centos:7-stackbase-devtoolset-8
 
 # Provide newer git for newinstall and eupspkg
 #
-RUN yum install -y rh-git218 && \
+RUN yum install -y rh-git218 devtoolset-8-toolchain lsof && \
     yum clean all && \
     echo ". /opt/rh/rh-git218/enable" > "/etc/profile.d/rh-git218.sh"
 
@@ -50,4 +50,3 @@ USER root
 
 ARG DEPS_TAG
 RUN echo "BUILD ID: $DEPS_TAG"
-
