Streamlined and unifued a procedure for building the deployment containers. Removed duplicates in scripts and instructions.

--- a/admin/tools/docker/replication/container/tools/Dockerfile.gke
+++ b/admin/tools/docker/replication/container/tools/Dockerfile.gke
@@ -1,14 +1,14 @@
 # Using the development toolchain
-FROM centos/devtoolset-6-toolchain-centos7
+FROM qserv/replica:dev
 
 USER 0
 
-RUN mkdir -p /qserv/bin && \
+RUN useradd qserv -u 1000 -U -d /qserv -c "Qserv Account" && \
+    mkdir -p /qserv/bin && \
     mkdir -p /qserv/lib && \
-    mkdir -p /qserv/work && \
-    chown -R 1001:1001 /qserv
+    chown -R 1000:1000 /qserv
 
-USER 1001
+USER 1000
 
 # Copy applications and libraries into the container at
 # the destination folder
@@ -17,9 +17,3 @@ ADD lib/lib*.so* /qserv/lib/
 
 ENV LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:/qserv/lib
 ENV PATH=${PATH}:/qserv/bin
-
-RUN cd /qserv/work
-
-# Set the default CMD to print the usage of the image
-ENTRYPOINT ["container-entrypoint"]
-CMD ["ls","-al","/qserv/bin"]
