--- a/admin/templates/configuration/etc/log4cxx.czar.properties
+++ b/admin/templates/configuration/etc/log4cxx.czar.properties
@@ -23,7 +23,7 @@ log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.conversionPattern=%d{yyyy-MM-ddTHH:mm:ss.SSSZ} %X %-5p %c{2} (%F:%L) - %m%n
 
 # Tune log at the module level
-log4j.logger.lsst.qserv.qproc=DEBUG
-log4j.logger.lsst.qserv.util=DEBUG
-log4j.logger.lsst.qserv.qana=DEBUG
+#log4j.logger.lsst.qserv.qproc=DEBUG
+#log4j.logger.lsst.qserv.util=DEBUG
+#log4j.logger.lsst.qserv.qana=DEBUG
 log4j.logger.lsst.qserv.xrdssi.msgs=WARN
