--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,15 @@
 *~
-build/
-.sconf_temp/
-.sconsign.dblite
+\#*\#
 *.pyc
-scons-qserv.log
-config.log
-/quick-start.txt
-/quick-start-devel.txt
-# in place build:
-/bin/
-/lib/
-/share/
-/qserv-start.sh
-/qserv-stop.sh
-/qserv-status.sh
 .tags
 .tags_sorted_by_file
-qserv_client_error.log
-qserv_client_info.log
+/build/
 /parallel-cmd-log/
-.cproject
-.metadata/
-.project
-.settings/
-.pydevproject
-RemoteSystemTempFiles/
-\#*\#
-_build.log
-_build.sh
-_build.tags
-nbproject/
-.vscode/
-core/modules/parser/.antlr
+/.cproject
+/.metadata/
+/.project
+/.settings/
+/.pydevproject
+/RemoteSystemTempFiles/
+/nbproject/
+/.vscode/
