Fix Qserv container builds after conda-ization of stack
- Base Qserv containers off lsstdm/scipipe-base:7

- Set Qserv-specific conda env ref (91cab1a) before invoking
newinstall when building qserv deps container

- Update default deps container docker tag to :deps_20200603_2019,
which includes new conda environment

--- a/admin/tools/docker/deps/Dockerfile
+++ b/admin/tools/docker/deps/Dockerfile
@@ -1,16 +1,10 @@
-FROM lsstsqre/centos:7-stackbase-devtoolset-8
-
-# Provide newer git for newinstall and eupspkg
-#
-RUN yum install -y rh-git218 devtoolset-8-toolchain lsof && \
-    yum clean all && \
-    echo ". /opt/rh/rh-git218/enable" > "/etc/profile.d/rh-git218.sh"
-
+FROM lsstdm/scipipe-base:7
 
 # Install Qserv prerequisites
 #
 RUN yum install -y \
         initscripts \
+        lsof \
     && yum clean all
 
 RUN groupadd qserv && \
